# VLC

./: CMakeLists.txt  README.md
docs/: API.md  ARCHITECTURE.md  BUILD.md  CLEANUP.md  DEPENDENCIES.md
include/: vlc.h
src/: main.c
src/config/: config_manager.c  config_manager.h
src/core/: playback_engine.c  playback_engine.h
src/playlist/: playlist.c  playlist.h
tests/: CMakeLists.txt  test_playlist.c
